<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="48dp"
    android:paddingEnd="48dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/stationIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/select_station_hint"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/Circle"
            app:srcCompat="@drawable/ic_default_station_image_180dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp">

        <TextView
            android:id="@+id/textViewStationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="18sp"
            android:textColor="#757575"
            android:textStyle="bold"
            tools:text="CNR-15 中国交通广播" />

        <TextView
            android:id="@+id/textViewGeneralInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:textSize="28sp"
            android:textColor="#212121"
            tools:text="汪峰 - 生来彷徨" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonPrev"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/previous_station"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_skip_previous"
                app:tint="#212121" />

            <ImageButton
                android:id="@+id/buttonPlay"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/shape_player_button_black"
                android:contentDescription="@string/play_pause"
                android:scaleType="centerInside"
                android:src="@drawable/ic_play_white" />

            <ImageButton
                android:id="@+id/buttonNext"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next_station"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_skip_next"
                app:tint="#212121" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonFullscreenExit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/exit_fullscreen"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_expand_more"
        app:tint="#757575" />

</LinearLayout>
